# MassSpring

./: CMakeLists.txt  MassSpring.pro  README.md
include/: GLWindow.h  MainWindow.h  NGLScene.h  RK4Spring.h
shaders/: ColourFragment.glsl  ColourVertex.glsl  PhongFragment.glsl  PhongVertex.glsl
src/: GLWindow.cpp  MainWindow.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  RK4Spring.cpp  main.cpp
ui/: MainWindow.ui
